# sni5gect-compact

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.old  Dockerfile.test  README.md  docker-compose.yml  test.yaml
shadower/: CMakeLists.txt  main.cc
shadower/comp/: CMakeLists.txt  scheduler.cc  scheduler.h  ue_tracker.cc  ue_tracker.h
shadower/comp/fft/: CMakeLists.txt  fft_processor.cu
shadower/comp/fft/tests/: fft_test.cc
shadower/comp/ssb/: CMakeLists.txt
shadower/comp/ssb/tests/: ssb_cuda_test.cc  ssb_test.cc
shadower/comp/sync/: CMakeLists.txt  syncer.cc  syncer.h
shadower/comp/sync/tests/: syncer_test.cc
shadower/comp/workers/: CMakeLists.txt  broadcast_worker.cc  gnb_dl_worker.cc  gnb_dl_worker.h  gnb_ul_worker.cc  gnb_ul_worker.h  influx_worker.cc  influx_worker.h  ue_dl_worker.cc  ue_dl_worker.h
shadower/comp/workers/tests/: broadcast_worker_rar_test.cc  broadcast_worker_sib1_test.cc  gnb_dl_worker_test.cc  gnb_ul_worker_test.cc  influx_worker_test.cc  ue_dl_worker_test.cc
shadower/hdr/: arg_parser.h  broadcast_worker.h  buffer_pool.h  constants.h  exploit.h  fft_processor.cuh  fft_processor.h  file_source.h  gnb_dl_worker.h  gnb_ul_worker.h  gpu_utils.cuh  lime_parameter_provider.h  limesdr_source.h  msg_helper.h  ring_buffer.h  scheduler.h  source.h  ssb_cuda.cuh  syncer.h  task.h  thread_pool.h  ue_dl_worker.h  ue_tracker.h  uhd_source.h  utils.h  wd_worker.h  worker_pool.h
shadower/modules/: CMakeLists.txt  dg_authentication_replay.cc  dg_authentication_request_sniffer.cc  dg_registration_reject.cc  dg_rrc_release.cc  dummy.cc  exploit.h  identity_request.cc  mac_sch_mtk_rlc_crash.cc  mac_sch_mtk_rrc_setup_crash_1.cc  mac_sch_mtk_rrc_setup_crash_1_new.cc  mac_sch_mtk_rrc_setup_crash_3.cc  mac_sch_mtk_rrc_setup_crash_3_effnet.cc  mac_sch_mtk_rrc_setup_crash_4.cc  mac_sch_mtk_rrc_setup_crash_4_effnet.cc  mac_sch_mtk_rrc_setup_crash_6.cc  mac_sch_mtk_rrc_setup_crash_6_effnet.cc  mac_sch_mtk_rrc_setup_crash_7.cc  mac_sch_mtk_rrc_setup_crash_7_effnet.cc  mac_sch_rrc_setup_crash_var.cc  plaintext_registration_accept.cc  plaintext_security_mode_command.cc  rrc_release_after_auth_failure.cc  ue_capability_enquiry_after_sec_command.cc
shadower/modules/hdr/: rrc_setup_helper.h
shadower/source/: CMakeLists.txt  file_source.cc  source.h  uhd_source.cc
shadower/source/tests/: source_test.cc
shadower/src/: broadcast_worker.cc  fft_processor.cc  fft_processor.cu  file_source.cc  gnb_dl_worker.cc  gnb_ul_worker.cc  gpu_utils.cu  limesdr_source.cc  msg_helper.cc  phy_cfg_utils.cc  ring_buffer.cc  scheduler.cc  source.cc  ssb_cuda.cu  syncer.cc  thread_pool.cc  trace_samples.cc  ue_dl_worker.cc  ue_tracker.cc  uhd_source.cc  utils.cc  wd_worker.cc
shadower/test/: CMakeLists.txt  broadcast_worker_test.cc  cell_search_test.cc  contention_resolution_test.cc  dci_ul_encode_test.cc  dummy_exploit.h  exploit_rrc_setup_test.cc  fft_test.cc  msg_helper_test.cc  pcap_writer.cc  pdsch_decode_search.cc  pdsch_decode_test.cc  pdsch_encode_test.cc  prach_detect_test.cc  prach_search_test.cc  pusch_cfo_search.cc  pusch_cfo_test.cc  pusch_decode_test.cc  pusch_delay_search.cc  rach_msg2_test.cc  rach_msg3_test.cc  rar_search_test.cc  registration_accept_constructor.cc  resampler_compare.cc  rrc_release_construction.cc  rrc_setup_test.cc  sdr_timing_test.cc  search_ssb_freq_test.cc  security_mode_command_construction.cc  sib_overshadow_test.cc  sib_search_test.cc  source_test.cc  ssb_encode_test.cc  ssb_frequency_correction.cc  syncer_test.cc  test_variables.h
shadower/test/data/: dci_ul_622.fc32  mib.raw  pdsch_640.fc32  prach.fc32  pusch_626.fc32  rach_msg2.fc32  rach_msg2_ul_grant.raw  rach_msg3.fc32  rrc_setup.fc32  rrc_setup.raw  sib1.fc32  sib1.raw  ssb.fc32
shadower/test/data/effnet/: contention_resolution.fc32  dci_ul_19926.fc32  mib.raw  pdsch_19944.fc32  prach.fc32  pusch_19928.fc32  rach_msg3.fc32  rach_msg3_prev.fc32  rar.fc32  rrc_setup.fc32  rrc_setup.raw  sib1.fc32  sib1.raw  ssb.fc32
shadower/test/data/singtel-n78-100MHz/: mib.raw  ssb.fc32
shadower/test/data/srsran/: dci_6382.fc32  mib.raw  pdsch_6400.fc32  prach.fc32  pusch_6386.fc32  rach_msg2.fc32  rach_msg2_ul_grant.raw  rach_msg3.fc32  rrc_setup.fc32  rrc_setup.raw  sib.fc32  sib1.raw  ssb.fc32
shadower/test/data/srsran-n3-20MHz/: contention_resolution.fc32  dci_6685.fc32  dci_6705.fc32  dci_6725.fc32  mib.raw  pdsch_2855.fc32  pdsch_3357.fc32  pdsch_4615.fc32  pusch_6688.fc32  pusch_6689.fc32  pusch_6708.fc32  pusch_6709.fc32  pusch_6728.fc32  pusch_6729.fc32  rach_msg3.fc32  rach_msg3_last.fc32  rar.fc32  rrc_setup.fc32  rrc_setup.raw  sib.fc32  sib1.raw  ssb.fc32
shadower/test/data/srsran-n78-20MHz/: dci_ul_3422.fc32  dci_ul_3462.fc32  dci_ul_3622.fc32  mib.raw  pdsch_3440.fc32  pdsch_3640.fc32  pdsch_3684.fc32  pusch_3426.fc32  pusch_3466.fc32  pusch_3626.fc32  rach_msg3.fc32  rar.fc32  rrc_setup.fc32  rrc_setup.raw  sib.fc32  sib1.raw
shadower/test/data/srsran-n78-40MHz/: dci_ul_12062.fc32  dci_ul_12102.fc32  dci_ul_12142.fc32  dci_ul_12262.fc32  dci_ul_12302.fc32  dci_ul_12382.fc32  dci_ul_13622.fc32  dci_ul_13662.fc32  dci_ul_13702.fc32  dci_ul_13782.fc32  mib.raw  pdsch_13640.fc32  pdsch_13720.fc32  pdsch_13726.fc32  pusch_12066.fc32  pusch_12106.fc32  pusch_12146.fc32  pusch_12266.fc32  pusch_12306.fc32  pusch_12386.fc32  pusch_13626.fc32  pusch_13666.fc32  pusch_13706.fc32  pusch_13786.fc32  rach_msg2.fc32  rach_msg3.fc32  rrc_setup.fc32  sib.fc32
shadower/test/hardware/: sdr_timing_test.cc  sdr_txrx_decode_test.cc  ssb_frequency_search.cc
shadower/test/msgs/: rrc_release_construction.cc  security_mode_command_construction.cc
shadower/tools/: CMakeLists.txt  cutter.cc  lime_sdr_recorder.cc  recorder.cc  recorder_fifo.cc  resampler.cc  scan_single.cc  scanner.cc  small_cutter.cc  source_recorder.cc  srsran_recorder.cc
shadower/utils/: CMakeLists.txt  arg_parser.h  phy_cfg_utils.h  ssb_utils.cc  ssb_utils.h  ue_dl_utils.h  utils.cc  utils.h
shadower/utils/src/: arg_parser.cc  gnb_dl_utils.cc  gnb_ul_utils.cc  phy_cfg_utils.cc  ue_dl_utils.cc  utils.cc
(+57 files in other folders)
