add_library(dummy SHARED dummy.cc)
target_link_libraries(dummy wdissector srslog rrc_nr_asn1 rrc_asn1 srsran_mac srsran_common)
target_include_directories(dummy PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(dummy PROPERTIES OUTPUT_NAME _dummy)
set_target_properties(dummy PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(dg_registration_reject SHARED dg_registration_reject.cc ${SHADOWER_DIR}/msg_helper.cc)
target_link_libraries(dg_registration_reject wdissector srslog rrc_nr_asn1 rrc_asn1 srsran_mac srsran_common)
target_include_directories(dg_registration_reject PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(dg_registration_reject PROPERTIES OUTPUT_NAME _dg_registration_reject)
set_target_properties(dg_registration_reject PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(dg_rrc_release SHARED dg_rrc_release.cc)
target_link_libraries(dg_rrc_release wdissector srslog rrc_nr_asn1 rrc_asn1 srsran_mac srsran_common)
target_include_directories(dg_rrc_release PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(dg_rrc_release PROPERTIES OUTPUT_NAME _dg_rrc_release)
set_target_properties(dg_rrc_release PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(dg_authentication_replay SHARED dg_authentication_replay.cc)
target_link_libraries(dg_authentication_replay wdissector srslog)
target_include_directories(dg_authentication_replay PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(dg_authentication_replay PROPERTIES OUTPUT_NAME _dg_authentication_replay)
set_target_properties(dg_authentication_replay PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(dg_authentication_request_sniffer SHARED dg_authentication_request_sniffer.cc)
target_link_libraries(dg_authentication_request_sniffer wdissector srslog)
target_include_directories(dg_authentication_request_sniffer PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(dg_authentication_request_sniffer PROPERTIES OUTPUT_NAME _dg_authentication_request_sniffer)
set_target_properties(dg_authentication_request_sniffer PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(identity_request SHARED identity_request.cc)
target_link_libraries(identity_request wdissector srslog)
target_include_directories(identity_request PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(identity_request PROPERTIES OUTPUT_NAME _identity_request)
set_target_properties(identity_request PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(plaintext_registration_accept SHARED plaintext_registration_accept.cc ${SHADOWER_DIR}/msg_helper.cc ${SHADOWER_DIR}/utils.cc)
target_link_libraries(plaintext_registration_accept wdissector ${SRSUE_SOURCES} ${SRSRAN_SOURCES})
target_include_directories(plaintext_registration_accept PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(plaintext_registration_accept PROPERTIES OUTPUT_NAME _plaintext_registration_accept)
set_target_properties(plaintext_registration_accept PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(plaintext_security_mode_command SHARED plaintext_security_mode_command.cc ${SHADOWER_DIR}/msg_helper.cc ${SHADOWER_DIR}/utils.cc)
target_link_libraries(plaintext_security_mode_command wdissector ${SRSUE_SOURCES} ${SRSRAN_SOURCES})
target_include_directories(plaintext_security_mode_command PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(plaintext_security_mode_command PROPERTIES OUTPUT_NAME _plaintext_security_mode_command)
set_target_properties(plaintext_security_mode_command PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(mac_sch_mtk_rlc_crash SHARED mac_sch_mtk_rlc_crash.cc ${SHADOWER_DIR}/utils.cc)
target_link_libraries(mac_sch_mtk_rlc_crash wdissector)
target_include_directories(mac_sch_mtk_rlc_crash PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(mac_sch_mtk_rlc_crash PROPERTIES OUTPUT_NAME _mac_sch_mtk_rlc_crash)
set_target_properties(mac_sch_mtk_rlc_crash PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(mac_sch_mtk_rrc_setup_crash_1 SHARED mac_sch_mtk_rrc_setup_crash_1.cc ${SHADOWER_DIR}/utils.cc)
target_link_libraries(mac_sch_mtk_rrc_setup_crash_1 wdissector ${SRSUE_SOURCES} ${SRSRAN_SOURCES} ${UHD_LIBRARIES} ${Boost_LIBRARIES})
target_include_directories(mac_sch_mtk_rrc_setup_crash_1 PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(mac_sch_mtk_rrc_setup_crash_1 PROPERTIES OUTPUT_NAME _mac_sch_mtk_rrc_setup_crash_1)
set_target_properties(mac_sch_mtk_rrc_setup_crash_1 PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(mac_sch_mtk_rrc_setup_crash_3 SHARED mac_sch_mtk_rrc_setup_crash_3.cc ${SHADOWER_DIR}/utils.cc)
target_link_libraries(mac_sch_mtk_rrc_setup_crash_3 wdissector ${SRSUE_SOURCES} ${SRSRAN_SOURCES} ${UHD_LIBRARIES} ${Boost_LIBRARIES})
target_include_directories(mac_sch_mtk_rrc_setup_crash_3 PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(mac_sch_mtk_rrc_setup_crash_3 PROPERTIES OUTPUT_NAME _mac_sch_mtk_rrc_setup_crash_3)
set_target_properties(mac_sch_mtk_rrc_setup_crash_3 PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(mac_sch_mtk_rrc_setup_crash_4 SHARED mac_sch_mtk_rrc_setup_crash_4.cc ${SHADOWER_DIR}/utils.cc)
target_link_libraries(mac_sch_mtk_rrc_setup_crash_4 wdissector ${SRSUE_SOURCES} ${SRSRAN_SOURCES} ${UHD_LIBRARIES} ${Boost_LIBRARIES})
target_include_directories(mac_sch_mtk_rrc_setup_crash_4 PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(mac_sch_mtk_rrc_setup_crash_4 PROPERTIES OUTPUT_NAME _mac_sch_mtk_rrc_setup_crash_4)
set_target_properties(mac_sch_mtk_rrc_setup_crash_4 PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(mac_sch_mtk_rrc_setup_crash_6 SHARED mac_sch_mtk_rrc_setup_crash_6.cc ${SHADOWER_DIR}/utils.cc)
target_link_libraries(mac_sch_mtk_rrc_setup_crash_6 wdissector ${SRSUE_SOURCES} ${SRSRAN_SOURCES} ${UHD_LIBRARIES} ${Boost_LIBRARIES})
target_include_directories(mac_sch_mtk_rrc_setup_crash_6 PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(mac_sch_mtk_rrc_setup_crash_6 PROPERTIES OUTPUT_NAME _mac_sch_mtk_rrc_setup_crash_6)
set_target_properties(mac_sch_mtk_rrc_setup_crash_6 PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(mac_sch_mtk_rrc_setup_crash_7 SHARED mac_sch_mtk_rrc_setup_crash_7.cc ${SHADOWER_DIR}/utils.cc)
target_link_libraries(mac_sch_mtk_rrc_setup_crash_7 wdissector ${SRSUE_SOURCES} ${SRSRAN_SOURCES} ${UHD_LIBRARIES} ${Boost_LIBRARIES})
target_include_directories(mac_sch_mtk_rrc_setup_crash_7 PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(mac_sch_mtk_rrc_setup_crash_7 PROPERTIES OUTPUT_NAME _mac_sch_mtk_rrc_setup_crash_7)
set_target_properties(mac_sch_mtk_rrc_setup_crash_7 PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(mac_sch_mtk_rrc_setup_crash_3_effnet SHARED mac_sch_mtk_rrc_setup_crash_3_effnet.cc ${SHADOWER_DIR}/utils.cc)
target_link_libraries(mac_sch_mtk_rrc_setup_crash_3_effnet wdissector ${SRSUE_SOURCES} ${SRSRAN_SOURCES} ${UHD_LIBRARIES} ${Boost_LIBRARIES})
target_include_directories(mac_sch_mtk_rrc_setup_crash_3_effnet PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(mac_sch_mtk_rrc_setup_crash_3_effnet PROPERTIES OUTPUT_NAME _mac_sch_mtk_rrc_setup_crash_3_effnet)
set_target_properties(mac_sch_mtk_rrc_setup_crash_3_effnet PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(mac_sch_mtk_rrc_setup_crash_4_effnet SHARED mac_sch_mtk_rrc_setup_crash_4_effnet.cc ${SHADOWER_DIR}/utils.cc)
target_link_libraries(mac_sch_mtk_rrc_setup_crash_4_effnet wdissector ${SRSUE_SOURCES} ${SRSRAN_SOURCES} ${UHD_LIBRARIES} ${Boost_LIBRARIES})
target_include_directories(mac_sch_mtk_rrc_setup_crash_4_effnet PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(mac_sch_mtk_rrc_setup_crash_4_effnet PROPERTIES OUTPUT_NAME _mac_sch_mtk_rrc_setup_crash_4_effnet)
set_target_properties(mac_sch_mtk_rrc_setup_crash_4_effnet PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(mac_sch_mtk_rrc_setup_crash_6_effnet SHARED mac_sch_mtk_rrc_setup_crash_6_effnet.cc ${SHADOWER_DIR}/utils.cc)
target_link_libraries(mac_sch_mtk_rrc_setup_crash_6_effnet wdissector ${SRSUE_SOURCES} ${SRSRAN_SOURCES} ${UHD_LIBRARIES} ${Boost_LIBRARIES})
target_include_directories(mac_sch_mtk_rrc_setup_crash_6_effnet PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(mac_sch_mtk_rrc_setup_crash_6_effnet PROPERTIES OUTPUT_NAME _mac_sch_mtk_rrc_setup_crash_6_effnet)
set_target_properties(mac_sch_mtk_rrc_setup_crash_6_effnet PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(mac_sch_mtk_rrc_setup_crash_7_effnet SHARED mac_sch_mtk_rrc_setup_crash_7_effnet.cc ${SHADOWER_DIR}/utils.cc)
target_link_libraries(mac_sch_mtk_rrc_setup_crash_7_effnet wdissector ${SRSUE_SOURCES} ${SRSRAN_SOURCES} ${UHD_LIBRARIES} ${Boost_LIBRARIES})
target_include_directories(mac_sch_mtk_rrc_setup_crash_7_effnet PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(mac_sch_mtk_rrc_setup_crash_7_effnet PROPERTIES OUTPUT_NAME _mac_sch_mtk_rrc_setup_crash_7_effnet)
set_target_properties(mac_sch_mtk_rrc_setup_crash_7_effnet PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(rrc_release_after_auth_failure SHARED rrc_release_after_auth_failure.cc)
target_link_libraries(rrc_release_after_auth_failure wdissector srslog rrc_nr_asn1 rrc_asn1 srsran_mac srsran_common)
target_include_directories(rrc_release_after_auth_failure PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(rrc_release_after_auth_failure PROPERTIES OUTPUT_NAME _rrc_release_after_auth_failure)
set_target_properties(rrc_release_after_auth_failure PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)

add_library(ue_capability_enquiry_after_sec_command SHARED ue_capability_enquiry_after_sec_command.cc)
target_link_libraries(ue_capability_enquiry_after_sec_command wdissector srslog rrc_nr_asn1 rrc_asn1 srsran_mac srsran_common)
target_include_directories(ue_capability_enquiry_after_sec_command PRIVATE ${WDISSECTOR_INCLUDES})
set_target_properties(ue_capability_enquiry_after_sec_command PROPERTIES OUTPUT_NAME _ue_capability_enquiry_after_sec_command)
set_target_properties(ue_capability_enquiry_after_sec_command PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/modules)
